assets/base.css
/* ... */
.contains-content-container,
.content-container {
  --border-radius: var(--text-boxes-radius);
  --border-width: var(--text-boxes-border-width);
  --border-opacity: var(--text-boxes-border-opacity);
  --shadow-horizontal-offset: var(--text-boxes-shadow-horizontal-offset);
  --shadow-vertical-offset: var(--text-boxes-shadow-vertical-offset);
  --shadow-blur-radius: var(--text-boxes-shadow-blur-radius);
  --shadow-opacity: var(--text-boxes-shadow-opacity);
  --shadow-visible: var(--text-boxes-shadow-visible);
}
.contains-media,
.global-media-settings {
  --border-radius: var(--media-radius);
  --border-width: var(--media-border-width);
  --border-opacity: var(--media-border-opacity);
  --shadow-horizontal-offset: var(--media-shadow-horizontal-offset);
  --shadow-vertical-offset: var(--media-shadow-vertical-offset);
  --shadow-blur-radius: var(--media-shadow-blur-radius);
  --shadow-opacity: var(--media-shadow-opacity);
  --shadow-visible: var(--media-shadow-visible);
}
.no-js:not(html) {
  display: none !important;
}
html.no-js .no-js:not(html) {
  display: block !important;
}
.no-js-inline {
  display: none !important;
}
html.no-js .no-js-inline {
  display: inline-block !important;
}
html.no-js .no-js-hidden {
  display: none !important;
}
.page-width--wide {
  max-width: 100%;
}
.page-width-desktop {
  padding: 0;
  margin: 0 auto;
}
@media only screen and (min-width: 750px) {
  .page-width--narrow {
    padding: 0 9rem;
  }
  .page-width-desktop {
    padding: 0;
  }
  .page-width-tablet {
    padding: 0 5rem;
  }
}
@media only screen and (min-width: 990px) {
  .page-width--narrow {
    max-width: 72.6rem;
    padding: 0;
  }
  .page-width-desktop {
    max-width: var(--page-width);
    padding: 0 5rem;
  }
}
.isolate {
  position: relative;
  z-index: 0;
}
.section + .section {
  margin-top: var(--spacing-sections-mobile);
}
@media only screen and (min-width: 750px) {
  .section + .section {
    margin-top: var(--spacing-sections-desktop);
  }
  main.content-for-layout > .section:last-of-type {
    padding-bottom: 8rem;
  }
  main.content-for-layout > .section:first-of-type,
  .sidebar-links {
    padding-top: 1.5rem;
  }
  main.content-for-layout > .section:nth-child(2) {
    width: 100%;
    min-width: 1200px;
    max-width: 100%;
  }
  /* Prevent section from taking up the full width */
  main.content-for-layout > .section.section--register {
    min-width: unset;
    grid-column: 2 / span 1;
  }
}
.element-margin-top {
  margin-top: 5rem;
}
@media only screen and (min-width: 750px) {
  .element-margin {
    margin-top: calc(5rem + var(--page-width-margin));
  }
}
body,
.color-background-1,
.color-background-2,
.color-inverse,
.color-accent-1,
.color-accent-2 {
  color: rgba(var(--color-foreground), 1);
  background-color: rgb(var(--color-background));
}
.background-secondary {
  background-color: rgba(var(--color-foreground), 0.04);
}
.grid-auto-flow {
  display: grid;
  grid-auto-flow: column;
}
.page-margin,
.shopify-challenge__container {
  margin: 7rem auto;
}
.rte-width {
  max-width: 82rem;
  margin: 0 auto 2rem;
}
.list-unstyled {
  margin: 0;
  padding: 0;
  list-style: none;
}
.hidden {
  display: none !important;
}
.visually-hidden {
  position: absolute !important;
  overflow: hidden;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
  clip: rect(0 0 0 0);
  word-wrap: normal !important;
}
.visually-hidden--inline {
  margin: 0;
  height: 1em;
}
.overflow-hidden {
  overflow: hidden;
}
.skip-to-content-link:focus {
  z-index: 9999;
  position: inherit;
  overflow: auto;
  width: auto;
  height: auto;
  clip: auto;
}
.full-width-link {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 2;
}
::-moz-selection {
  background-color: rgba(var(--color-foreground), 0.2);
}
::selection {
  background-color: rgba(var(--color-foreground), 0.2);
}
.text-body {
  font-size: 1.5rem;
  letter-spacing: 0.06rem;
  line-height: calc(1 + 0.8 / var(--font-body-scale));
  font-family: var(--font-body-family);
  font-style: var(--font-body-style);
  font-weight: var(--font-body-weight);
}
h1,
h2,
h3,
h4,
h5,
.h0,
.h1,
.h2,
.h3,
.h4,
.h5 {
  font-family: var(--font-body-family);
  font-style: var(--font-heading-style);
  font-weight: var(--font-heading-weight);
  color: rgb(var(--color-foreground));
  line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
  word-break: break-word;
}
.hxl {
  font-size: calc(var(--font-heading-scale) * 5rem);
}
@media only screen and (min-width: 750px) {
  .hxl {
    font-size: calc(var(--font-heading-scale) * 6.2rem);
  }
}
.h0 {
  font-size: calc(var(--font-heading-scale) * 4rem);
}
@media only screen and (min-width: 750px) {
  .h0 {
    font-size: calc(var(--font-heading-scale) * 5.2rem);
  }
}
h1,
.h1 {
  font-size: calc(var(--font-heading-scale) * 2rem);
}
@media only screen and (min-width: 750px) {
  h1,
  .h1 {
    font-size: calc(var(--font-heading-scale) * 3rem);
  }
}
h2,
.h2 {
  font-size: calc(var(--font-heading-scale) * 2rem);
}
@media only screen and (min-width: 750px) {
  h2,
  .h2 {
    font-size: calc(var(--font-heading-scale) * 2.4rem);
  }
}
h3,
.h3 {
  font-size: calc(var(--font-heading-scale) * 1.7rem);
}
@media only screen and (min-width: 750px) {
  h3,
  .h3 {
    font-size: calc(var(--font-heading-scale) * 1.5rem);
  }
}
h4,
.h4 {
  font-family: var(--font-heading-family);
  font-style: var(--font-heading-style);
  font-size: calc(var(--font-heading-scale) * 1.5rem);
}
h5,
.h5 {
  font-size: calc(var(--font-heading-scale) * 1.2rem);
}
@media only screen and (min-width: 750px) {
  h5,
  .h5 {
    font-size: calc(var(--font-heading-scale) * 1.3rem);
  }
}
h6,
.h6 {
  color: rgba(var(--color-foreground), 1);
  -webkit-margin-before: 1.67em;
  margin-block-start: 1.67em;
  -webkit-margin-after: 1.67em;
  margin-block-end: 1.67em;
}
b,
strong {
  font-weight: bold;
}
/* ... */

